--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <display-name>Programmer Profile</display-name>
+    <servlet>
+        <servlet-name>SvSkillController</servlet-name>
+        <servlet-class>com.programmerprofile.app.controller.SvSkillController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>SvSkillController</servlet-name>
+        <url-pattern>/SvSkillController</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>profile</welcome-file>
     </welcome-file-list>
